# gem-player

./: .gitignore  Cargo.toml  LICENSE  README.md  build-macos.sh  build.rs  dist-workspace.toml  manifest.xml  rustfmt.toml  setup.iss  songs_diff.txt  songs_with_glob.txt  songs_with_walkdir.txt  windows_installer.iss  windows_installer.iss.hbs
.github/: FUNDING.yml
.github/workflows/: build_macos.yml  build_windows.yml  release.yml
build_scripts/: .env.example  build-macos.sh  build_macos.sh  build_windows.sh
build_scripts_OLD/: build_macos.sh  build_windows.sh
installer/: Package.wxs  installer.iss  installer.wixproj  installer.wxs  setup.iss  tiny.iss
platform/macos/: osx-document-types.plist  settings.py
platform/windows/: installer_script.iss
scripts/: .env.example  build_macos.sh
src/: artwork_cache.rs  commands.rs  config.rs  constants.rs  context_menu.rs  custom_sink.rs  custom_window.rs  library_folder_picker.rs  library_watcher.rs  main.rs  media_controls.rs  menu.rs  models.rs  nosleep_manager.rs  os_media_controls.rs  player.rs  playlist.rs  resources.rs  song.rs  track.rs  ui.rs  unused.rs  utils.rs  visualizer.rs  visualizer_source.rs
src/commands/: executor.rs  formatting.rs  macos_menu.rs  mod.rs  windows_shortcuts.rs
src/macos/: app_delegate.rs  mod.rs
src/platform/: macos_menu.rs  mod.rs  windows_shortcuts.rs
src/ui/: bottom_bar.rs  control_panel.rs  file_drag_and_drop.rs  file_drop_overlay.rs  library_view.rs  mod.rs  navigation_bar.rs  playlist_view.rs  queue_view.rs  root.rs  settings_view.rs
src/ui/widgets/: artwork.rs  bar_display.rs  centered_frame.rs  chip.rs  marquee.rs  mod.rs  playing_indicator.rs  toggle_switch.rs  track_artwork.rs
wix/: main.wxs
