[package]
name = "gem-player"
version = "0.2.1"
edition = "2021"
description = "A lightweight music player."
build = "build.rs"
repository = "https://github.com/JamesMoreau/gem-player"
authors = ["James Moreau"]

[dependencies]
dark-light = "2.0.0"
eframe = { version = "0.33.0", features = ["default", "persistence"] }
egui_extras = { version = "0.33.0", features = ["all_loaders"] }
egui_material_icons = "0.5.0"
egui-notify = "0.21.0"
env_logger = { version = "0.11.7", default-features = false, features = [
	"auto-color",
	"humantime",
] }
font-kit = "0.14.3"
fully_pub = "0.1.4"
function_name = "0.3.0"
image = { version = "0.25.6", features = ["jpeg", "png"] }
infer = "0.19.0"
lofty = "0.22.4"
log = "0.4.28"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
opener = { version = "0.8.2", features = ["reveal"] }
rand = "0.9.2"
rfd = "0.15.4"
rodio = { version = "0.21.1", features = ["symphonia-all"] }
ron = "0.11.0"
rustfft = "6.4.1"
sanitize-filename = "0.6.0"
strum = "0.27.2"
strum_macros = "0.27.2"
trash = "5.2.3"
walkdir = "2.5.0"
rayon = "1.11.0"

[build-dependencies]
winres = "0.1.12"
handlebars = "6.3.2"
serde = { version = "1.0.228", features = ["derive"]}

[package.metadata.bundle]
name = "Gem Player"
identifier = "io.github.jamesmoreau.gemplayer"
icon = ["assets/icon.png"]

