[package]
name = "gem-player"
version = "0.4.0"
edition = "2021"
description = "A lightweight music player."
build = "build.rs"
repository = "https://github.com/JamesMoreau/gem-player"
authors = ["James Moreau"]

[dependencies]
anyhow = "1.0.102"
confy = "2.0.0"
dark-light = "2.0.0"
eframe = "0.33.3"
egui = { version = "0.33.0", features = ["serde"] }
egui-notify = "0.21.0"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui_material_icons = "0.5.0"
env_logger = { version = "0.11.10", default-features = false, features = [
	"auto-color",
	"humantime",
] }
font-kit = "0.14.3"
fully_pub = "0.1.4"
image = { version = "0.25.10", features = ["jpeg", "png"] }
lofty = "0.23.3"
log = "0.4.29"
m3u = "1.0.0"
mimalloc = "0.1.48"
nosleep = "0.2.1"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
opener = { version = "0.8.4", features = ["reveal"] }
rand = "0.10.0"
rayon = "1.11.0"
rfd = "0.17.2"
rodio = { version = "0.22.2", features = ["symphonia-all"] }
rustfft = "6.4.1"
sanitize-filename = "0.6.0"
serde = "1.0.228"
strum = "0.28.0"
strum_macros = "0.28.0"
trash = "5.2.5"
walkdir = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
muda = "0.17.1"

[build-dependencies]
winres = "0.1.12"
ico = "0.5.0"
image = "0.25.10"

# This is used by cargo-bundle
[package.metadata.bundle]
name = "Gem Player"
identifier = "io.github.jamesmoreau.gemplayer"
icon = ["assets/icon.png"]
category = "public.app-category.music"
resources = ["assets/clair_de_lune.mp3"]
